--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^23.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@date-io/date-fns": "^2.10.6",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "final-form": "^4.20.1",
     "final-form-material-ui": "^0.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-modern-datepicker": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
