--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modern-datepicker": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "use-file-upload": "^1.0.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
